<resources>
    <string name="app_name">mediconline</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email:</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="cedula">Cedula:</string>
    <string name="edad">Edad:</string>
    <string name="textview">TextView</string>
    <string name="peso">Peso:</string>
    <string name="usuario">Usuario:</string>
    <string name="clave">Clave:</string>
    <string name="grabar">Grabar</string>
    <string name="altura">Altura</string>
</resources>